--- a/CafeTestMethods/01_CafeTestMethods.csproj
+++ b/CafeTestMethods/01_CafeTestMethods.csproj
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CafeRepository\CafeRepository.csproj">
+    <ProjectReference Include="..\CafeRepository\01_CafeRepository.csproj">
       <Project>{f6dd560f-bf1c-4f69-892c-09bdd8e99f20}</Project>
-      <Name>CafeRepository</Name>
+      <Name>01_CafeRepository</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
