--- a/CafeRepository/01_CafeRepository.csproj
+++ b/CafeRepository/01_CafeRepository.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CafeRepository</RootNamespace>
-    <AssemblyName>CafeRepository</AssemblyName>
+    <AssemblyName>01_CafeRepository</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
